<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_weight="1.0"
    tools:context="elem.invertapp.IdSession">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp"
        android:text="@string/IdSessionHeader"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/questionsText"
        android:id="@+id/questionsText"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:gravity="bottom"
        android:id="@+id/buttonsLayout">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/yesButtonText"
                android:textSize="24sp"
                android:id="@+id/yesButton"
                android:onClick="yesButtonClick"
                android:layout_weight="1"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/noButtonText"
                android:textSize="24sp"
                android:id="@+id/noButton"
                android:onClick="noButtonClick"
                android:layout_weight="1"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:textSize="24sp"
                android:text="@string/nsButtonText"
                android:id="@+id/nsButton"
                android:onClick="nsButtonClick"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:textSize="24sp"
                android:text="@string/showButtonText"
                android:id="@+id/showButton"
                android:onClick="showButtonClick"
                android:layout_weight="1"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:textSize="24sp"
                android:text="@string/helpButtonText"
                android:id="@+id/helpButton"
                android:onClick="helpButtonClick"
                android:layout_weight="1"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:textSize="24sp"
                android:text="@string/startOverButtonText"
                android:id="@+id/startOverButton"
                android:onClick="startOverButtonClick"
                android:layout_weight="1"/>
        </LinearLayout>


    </LinearLayout>
    <GridView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/idGrid"
        android:layout_below="@id/questionsText"
        android:layout_marginTop="20dp"
        android:verticalSpacing="30dp"
        android:horizontalSpacing="20dp"
        android:columnWidth="250dp"
        android:numColumns="auto_fit"
        android:stretchMode="spacingWidthUniform"
        android:layout_above="@+id/buttonsLayout" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/helpImageView"
        android:layout_below="@id/questionsText"
        android:layout_above="@id/buttonsLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:minWidth="350dp"
        android:minHeight="250dp"
        android:focusable="false"
        android:focusableInTouchMode="false"/>





</RelativeLayout>
